--- a/templates/travels/_entry.twig
+++ b/templates/travels/_entry.twig
@@ -43,7 +43,7 @@
         </div>
     {% endif %}
 
-    {% if entry.relatedCreativeProjects|length or entry.relatedBlogPosts|length or entry.relatedPhotographyAlbums|length %}
+    {% if entry.relatedBlogPosts|length or entry.relatedPhotographyAlbums|length %}
         <div class="related">
             <h3>Related Content</h3>
             {% if entry.relatedPhotographyAlbums|length %}
@@ -51,14 +51,6 @@
                 <ul>
                     {% for album in entry.relatedPhotographyAlbums.all() %}
                         <li><a href="{{ album.url }}">{{ album.title }}</a></li>
-                    {% endfor %}
-                </ul>
-            {% endif %}
-            {% if entry.relatedCreativeProjects|length %}
-                <h4>Related Creative Projects</h4>
-                <ul>
-                    {% for project in entry.relatedCreativeProjects.all() %}
-                        <li><a href="{{ project.url }}">{{ project.title }}</a></li>
                     {% endfor %}
                 </ul>
             {% endif %}
