--- a/templates/thoughts/_entry.twig
+++ b/templates/thoughts/_entry.twig
@@ -25,6 +25,15 @@
         </div>
     {% endif %}
 
+    {# Show locations #}
+    {% if entry.locations|length %}
+        <div style="margin: 2rem 0;">
+            {% for location in entry.locations.all() %}
+                <a href="{{ location.url }}" class="tag">📍 {{ location.title }}</a>
+            {% endfor %}
+        </div>
+    {% endif %}
+
     {% if entry.blogCategories|length %}
         <div class="categories">
             <h3>Categories</h3>
