--- a/templates/freelance/_entry.twig
+++ b/templates/freelance/_entry.twig
@@ -31,6 +31,15 @@
             </div>
         {% endif %}
 
+        {# Show locations #}
+        {% if entry.locations|length %}
+            <div style="margin-bottom: 2rem;">
+                {% for location in entry.locations.all() %}
+                    <a href="{{ location.url }}" class="tag">📍 {{ location.title }}</a>
+                {% endfor %}
+            </div>
+        {% endif %}
+
         {% if entry.projectImages|length %}
             <div class="content">
                 <h2>Project Images</h2>
