--- a/templates/locations/_category.twig
+++ b/templates/locations/_category.twig
@@ -87,8 +87,10 @@
                             {% endif %}
                             <h3 style="margin-top: 0;"><a href="{{ post.url }}">{{ post.title }}</a></h3>
                             <div class="meta">Published: {{ post.postDate|date('F j, Y') }}</div>
-                            {% if post.description %}
-                                <p>{{ post.description|length > 200 ? post.description|slice(0, 200) ~ '...' : post.description }}</p>
+                            {% if post.summary %}
+                                <p>{{ post.summary }}</p>
+                            {% elseif post.postBody %}
+                                <p>{{ post.postBody|length > 200 ? post.postBody|slice(0, 200) ~ '...' : post.postBody }}</p>
                             {% endif %}
                         </li>
                     {% endfor %}
